# docs/swagger.yaml
@@ -44,7 +44,8 @@ definitions:
       create_time:
         type: string
       post_id:
-        type: integer
+        example: "0"
+        type: string
       status:
         type: integer
       title:
@@ -147,35 +148,6 @@ paths:
       tags:
       - user
   /post:
-    get:
-      consumes:
-      - application/json
-      description: 获取全部帖子列表
-      parameters:
-      - description: 分页页码
-        in: query
-        name: page
-        required: true
-        type: integer
-      - description: 每页数量
-        in: query
-        name: size
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "1000":
-          schema:
-            $ref: '#/definitions/controller.ResponseData'
-        "1005":
-          schema:
-            $ref: '#/definitions/controller.ResponseData'
-      security:
-      - ApiKeyAuth: []
-      summary: 帖子列表
-      tags:
-      - post
     post:
       consumes:
       - application/json
@@ -236,6 +208,66 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: 帖子详情
+      tags:
+      - post
+  /posts1:
+    get:
+      consumes:
+      - application/json
+      description: 获取全部帖子列表
+      parameters:
+      - description: 分页页码
+        in: query
+        name: page
+        required: true
+        type: integer
+      - description: 每页数量
+        in: query
+        name: size
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "1000":
+          schema:
+            $ref: '#/definitions/controller.ResponseData'
+        "1005":
+          schema:
+            $ref: '#/definitions/controller.ResponseData'
+      security:
+      - ApiKeyAuth: []
+      summary: 帖子列表
+      tags:
+      - post
+  /posts2:
+    get:
+      consumes:
+      - application/json
+      description: 根据前端参数动态获取全部帖子列表，按 时间 或 分数 排序
+      parameters:
+      - description: 分页页码
+        in: query
+        name: page
+        required: true
+        type: integer
+      - description: 每页数量
+        in: query
+        name: size
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "1000":
+          schema:
+            $ref: '#/definitions/controller.ResponseData'
+        "1005":
+          schema:
+            $ref: '#/definitions/controller.ResponseData'
+      security:
+      - ApiKeyAuth: []
+      summary: 帖子列表
       tags:
       - post
   /signup:
